[WIP] Implementation of swagger - but endpoint not found

--- a/backend-mock/tsconfig.json
+++ b/backend-mock/tsconfig.json
@@ -1,12 +1,20 @@
 {
-	"compilerOptions": {
-		"lib": ["es5", "es6"],
-		"target": "es5",
-		"module": "commonjs",
-		"moduleResolution": "node",
-		"outDir": "./build",
-		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true,
-		"sourceMap": true
-	}
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  },
+  "compilerOptions": {
+    "lib": ["es5", "es6"],
+    "target": "es5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "outDir": "./build",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@/utils/*": ["./utils/*"]
+    }
+  }
 }
