--- a/backend-mock/package.json
+++ b/backend-mock/package.json
@@ -6,12 +6,15 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^16.18.105",
+    "@types/swagger-ui-express": "^4.1.6",
     "ts-node": "10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "4.5.2"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/swagger-jsdoc": "^6.0.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
@@ -19,6 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "typeorm": "0.3.20"
   },
