--- a/backend-mock/package.json
+++ b/backend-mock/package.json
@@ -7,11 +7,12 @@
     "@types/express": "^4.17.21",
     "@types/node": "^16.18.105",
     "ts-node": "10.9.1",
-    "typescript": "4.5.2"
-  },
-  "dependencies": {
+    "typescript": "4.5.2",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "ts-node-dev": "^2.0.0"
+  },
+  "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
@@ -19,7 +20,6 @@
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
-    "ts-node-dev": "^2.0.0",
     "typeorm": "0.3.20"
   },
   "scripts": {
