--- a/backend-mock/package.json
+++ b/backend-mock/package.json
@@ -9,13 +9,13 @@
     "@types/swagger-ui-express": "^4.1.6",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "4.5.2"
-  },
-  "dependencies": {
+    "typescript": "4.5.2",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/swagger-jsdoc": "^6.0.4",
-    "typescript": "4.5.2",
+    "ts-node-dev": "^2.0.0"
+  },
+  "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
@@ -25,7 +25,6 @@
     "sqlite3": "^5.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "ts-node-dev": "^2.0.0",
     "typeorm": "0.3.20"
   },
   "scripts": {
