--- a/backend-mock/package.json
+++ b/backend-mock/package.json
@@ -4,16 +4,16 @@
   "description": "Awesome project developed with TypeORM.",
   "type": "commonjs",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^16.18.105",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "ts-node": "10.9.1",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "4.5.2",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "ts-node-dev": "^2.0.0"
+    "typescript": "4.5.2"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -21,6 +21,7 @@
     "express-async-errors": "^3.1.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "swagger-jsdoc": "^6.2.8",
