--- a/backend-mock/package.json
+++ b/backend-mock/package.json
@@ -16,6 +16,7 @@
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
