Structured components & types to start stacking features around posts & lists

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -29,6 +29,9 @@
     "react/jsx-uses-react": "off",
     "react/jsx-uses-vars": "off",
 
+    // Disabling prop-types because we use TypeScript
+    "react/prop-types": "off",
+
     // Disallowing relative imports in favor of absolute imports
     "no-restricted-imports": [
       "error",
