--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.3",
+    "facepaint": "^1.2.1",
     "jwt-decode": "^4.0.0",
     "next": "14.2.10",
     "react": "^18",
@@ -19,6 +20,7 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@types/facepaint": "^1.2.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
