--- a/.github/workflows/dead-links-checker.yml
+++ b/.github/workflows/dead-links-checker.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: Check for broken links
         id: link-report
-        uses: https://github.com/Monstarrrr/link-checker@v0.1
+        uses: Monstarrrr/link-checker@v0.1
         with:
           # Required:
           url: "https://rebutify.org"
