--- a/.github/workflows/dead-links-checker.yml
+++ b/.github/workflows/dead-links-checker.yml
@@ -1,12 +1,12 @@
-name: Broken link check
+name: link-checker
 on: [push]
 
 jobs:
   broken_link_checker_job:
     runs-on: ubuntu-latest
-    name: Check for broken links
+    name: Checking for broken links
     steps:
-      - name: Check for broken links
+      - name: Checking for broken links
         id: link-report
         uses: Monstarrrr/link-checker@v0.1
         with:
