--- a/.github/workflows/dead-links-checker.yml
+++ b/.github/workflows/dead-links-checker.yml
@@ -1,5 +1,8 @@
 name: link-checker
-on: [push]
+on:
+  schedule:
+    # Runs at 00:00 UTC every day
+    - cron: "0 0 * * *"
 
 jobs:
   broken_link_checker_job:
