--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -18,7 +18,7 @@
     "plugin:react/recommended",
 
     // Enabling eslint-plugin-react-hooks recommended rules
-    "plugin:react-hooks/recommended"
+    "react-hooks"
   ],
   "rules": {
     /* 
@@ -39,8 +39,7 @@
         "patterns": [
           {
             "group": ["./", "../"],
-            "message": "Relative imports are not allowed.",
-            "exceptions": ["*.css"]
+            "message": "Relative imports are not allowed."
           },
           {
             "group": ["@/_*"],
@@ -53,7 +52,7 @@
   "settings": {
     "react": {
       // We need to set react version for eslint-plugin-react
-      "version": "18"
+      "version": "19"
     }
   }
 }
