--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,26 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
-    "axios": "^1.7.3",
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "facepaint": "^1.2.1",
     "jwt-decode": "^4.0.0",
-    "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-redux": "^9.1.2",
+    "next": "^15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/facepaint": "^1.2.5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "typescript": "^5"
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.14.0",
+    "typescript": "^5",
+    "typescript-eslint": "^8.18.2"
   }
 }
