--- a/backend-mock/package.json
+++ b/backend-mock/package.json
@@ -15,10 +15,11 @@
     "@types/node": "^16.18.105",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
     "ts-node": "10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "4.5.2"
+    "typescript": "4.8.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
