--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "sass": "^1.83.4",
     "typescript": "^5"
   }
 }
