Update backend_ci.yml for typesense
Signed-off-by: Monstar <31903668+Monstarrrr@users.noreply.github.com>

--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -41,7 +41,7 @@ jobs:
           sed -i 's/^DJANGO_SECRET_KEY=$/DJANGO_SECRET_KEY=abc123/' .env
           sed -i 's/^EMAIL_PORT=$/EMAIL_PORT=587/' .env
           sed -i 's/^DJANGO_SECURE_HSTS_SECONDS=$/DJANGO_SECURE_HSTS_SECONDS=60/' .env
-          sed -i 's/^TYPESENSE_SECRET_KEY=meowimasecretkeypurr/' .env
+          sed -i 's/^TYPESENSE_SECRET_KEY=$/TYPESENSE_SECRET_KEY=meowimasecretkeypurr/' .env
 
       - name: Run ruff
         run: |
